--- a/index.html
+++ b/index.html
@@ -1,33 +1,25 @@
 <!DOCTYPE html>
-<HTML lang="en">
+<HTML lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>David Chus's China Bistro</title>
     <link rel="stylesheet" href="./assets/fontawesome/css/all.css">
+    <link rel="stylesheet" href="./bootstrap-5.0.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/css/main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">
+
 </head>
+
 <body>
-    <!-- main container -->
-    <div class="wrapper">
+    <script src="./bootstrap-5.0.2/js/jquery-3.6.0.min.js"></script>
+    <script src="./bootstrap-5.0.2/js/bootstrap.min.js"></script>
+    <script src="./scripts/samples.js"></script>
 
-        <!-- intro  -->
-        <div id="intro">
-            <h1 id="titleIntro">this is <br> massively</h1>
-
-            <p id="descIntro">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel magni possimus ipsa cumque doloremque assumenda eius quibusdam culpa alias, expedita molestias repellendus reprehenderit? Omnis, enim nesciunt officia rem odit exercitationem!</p>
-            
-
-            <div class="circle">
-                <a class="action" href="#">
-                    <i class="fas fa-arrow-down"></i>
-                </a>
-            </div>
-
-
-
-        </div>
-    </div>
 </body>
+
 </HTML>
