starting bootstrap 5 tutorial

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>David Chus's China Bistro</title>
     <link rel="stylesheet" href="./assets/fontawesome/css/all.css">
-    <link rel="stylesheet" href="./bootstrap-5.0.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./bootstrap-5.0.2/css/bootstrap.css">
     <link rel="stylesheet" href="./assets/css/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,9 +16,17 @@
 </head>
 
 <body>
+    <script src="https://unpkg.com/@popperjs/core@2.4.0/dist/umd/popper.min.js"></script>
     <script src="./bootstrap-5.0.2/js/jquery-3.6.0.min.js"></script>
-    <script src="./bootstrap-5.0.2/js/bootstrap.min.js"></script>
+    <script src="./bootstrap-5.0.2/js/bootstrap.js"></script>
     <script src="./scripts/samples.js"></script>
+
+
+    <h1>Hello world!</h1>
+
+    <div class="alert alert-primary" role="alert">
+        This is a primary alert—check it out!
+    </div>
 
 </body>
 
