--- a/index.html
+++ b/index.html
@@ -7,27 +7,74 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>David Chus's China Bistro</title>
     <link rel="stylesheet" href="./assets/fontawesome/css/all.css">
-    <link rel="stylesheet" href="./bootstrap-5.0.2/css/bootstrap.css">
+    <link rel="stylesheet" href="./bootstrap-5.0.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/css/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Oxygen:wght@300&display=swap"
+        rel="stylesheet">
 
 </head>
 
 <body>
     <script src="https://unpkg.com/@popperjs/core@2.4.0/dist/umd/popper.min.js"></script>
     <script src="./bootstrap-5.0.2/js/jquery-3.6.0.min.js"></script>
-    <script src="./bootstrap-5.0.2/js/bootstrap.js"></script>
+    <script src="./bootstrap-5.0.2/js/bootstrap.min.js"></script>
     <script src="./scripts/samples.js"></script>
 
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+        <div class="container">
+            <a class="navbar-brand" href="#"></a>
+            <div class="icon">
+            </div>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Features</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Pricing</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <header class="page-header gradient">
+        <div class="container">
+            <div class="row pt-3 align-items-center justify-content-center">
 
-    <h1>Hello world!</h1>
+                <div class="col-md-4">
+                    <img src="./assets/images/Architect_Flatline.svg" alt="arch image">
+                </div>
 
-    <div class="alert alert-primary" role="alert">
-        This is a primary alert—check it out!
-    </div>
+                <div class="col-md-4 text-center">
+                    <h2>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum perspiciatis esse incidunt
+                        repellat voluptates.
+                    </h2>
+                </div>
 
+                <div class="col-md-4">
+                    <img src="./assets/images/Designer _Flatline.svg" alt="arch image">
+                </div>
+            </div>
+        </div>
+    </header>
 </body>
 
 </HTML>
