--- a/index.html
+++ b/index.html
@@ -58,22 +58,29 @@
         <div class="container">
             <div class="row pt-3 align-items-center justify-content-center">
 
-                <div class="col-md-4">
-                    <img src="./assets/images/Architect_Flatline.svg" alt="arch image">
+                <div class="col-md-4 img-header-left justify-content-center">
+                    <img class="img-fluid" src="./assets/images/Architect_Flatline.svg" alt="arch image">
                 </div>
 
-                <div class="col-md-4 text-center">
-                    <h2>
+                <div class="col-md-4 text-center text-wrap">
+                    <h2 class="fs-3 pt-5 pb-4">
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum perspiciatis esse incidunt
                         repellat voluptates.
                     </h2>
+                    <button type="button " class="btn btn-outline-success btn-lg p-2">Read more</button>
+                    <button type="button " class="btn btn-outline-warning btn-lg p-2">Play video</button>
                 </div>
 
-                <div class="col-md-4">
-                    <img src="./assets/images/Designer _Flatline.svg" alt="arch image">
+                <div class="col-md-4  img-header-right justify-content-center">
+                    <img class="img-fluid" src="./assets/images/Designer _Flatline.svg" alt="arch image">
                 </div>
             </div>
         </div>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+            <path fill="#fff" fill-opacity="1"
+                d="M0,192L0,96L120,96L120,32L240,32L240,160L360,160L360,320L480,320L480,64L600,64L600,192L720,192L720,288L840,288L840,32L960,32L960,160L1080,160L1080,32L1200,32L1200,128L1320,128L1320,64L1440,64L1440,320L1320,320L1320,320L1200,320L1200,320L1080,320L1080,320L960,320L960,320L840,320L840,320L720,320L720,320L600,320L600,320L480,320L480,320L360,320L360,320L240,320L240,320L120,320L120,320L0,320L0,320Z">
+            </path>
+        </svg>
     </header>
 </body>
 
