--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#"></a>
-            <div class="icon">
-            </div>
+            <a class="navbar-brand" href="#">
+                <div class="icon ">
+                    <img class="img-fluid" src="./assets/images/music_note.png" alt="brand icon">
+                </div>
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -58,7 +60,7 @@
         <div class="container">
             <div class="row pt-3 align-items-center justify-content-center">
 
-                <div class="col-md-4 img-header-left justify-content-center">
+                <div class="col-md-4">
                     <img class="img-fluid" src="./assets/images/Architect_Flatline.svg" alt="arch image">
                 </div>
 
@@ -71,17 +73,33 @@
                     <button type="button " class="btn btn-outline-warning btn-lg p-2">Play video</button>
                 </div>
 
-                <div class="col-md-4  img-header-right justify-content-center">
+                <div class="col-md-4">
                     <img class="img-fluid" src="./assets/images/Designer _Flatline.svg" alt="arch image">
                 </div>
             </div>
         </div>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-            <path fill="#fff" fill-opacity="1"
-                d="M0,192L0,96L120,96L120,32L240,32L240,160L360,160L360,320L480,320L480,64L600,64L600,192L720,192L720,288L840,288L840,32L960,32L960,160L1080,160L1080,32L1200,32L1200,128L1320,128L1320,64L1440,64L1440,320L1320,320L1320,320L1200,320L1200,320L1080,320L1080,320L960,320L960,320L840,320L840,320L720,320L720,320L600,320L600,320L480,320L480,320L360,320L360,320L240,320L240,320L120,320L120,320L0,320L0,320Z">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 200">
+            <path fill="#FFF" fill-opacity="1"
+                d="M0,64L40,69.3C80,75,160,85,240,112C320,139,400,181,480,170.7C560,160,640,96,720,101.3C800,107,880,181,960,197.3C1040,213,1120,171,1200,160C1280,149,1360,171,1400,181.3L1440,192L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z">
             </path>
         </svg>
     </header>
+
+    <section class="social">
+        <div class="container">
+            <div class="row w-50 mx-auto pt-3 justify-content-center">
+                <div class="col-lg-2 col-md-3 col-sm-3 col-3"><img class="img-fluid" src="./assets/images/Facebook.png"
+                        alt=""></div>
+                <div class="col-lg-2 col-md-3 col-sm-3 col-3"><img class="img-fluid" src="./assets/images/Twitter.png"
+                        alt=""></div>
+                <div class="col-lg-2 col-md-3 col-sm-3 col-3"><img class="img-fluid" src="./assets/images/Linkedin.png"
+                        alt=""></div>
+                <div class="col-lg-2 col-md-3 col-sm-3 col-3"><img class="img-fluid" src="./assets/images/Instagram.png"
+                        alt="">
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </HTML>
