--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
     <script src="./scripts/samples.js"></script>
 
+    <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#">
@@ -62,24 +63,26 @@
             </div>
         </div>
     </nav>
+    <!-- HEADER -->
     <header class="page-header gradient">
         <div class="container">
-            <div class="row pt-3 align-items-center justify-content-center">
+            <div class="margin"></div>
+            <div class="row align-items-center justify-content-center">
 
-                <div class="col-md-4">
+                <div class="col-md-3 col-sm-3">
                     <img class="img-fluid" src="./assets/images/Architect_Flatline.svg" alt="arch image">
                 </div>
 
-                <div class="col-md-4 text-center text-wrap">
-                    <h2 class="fs-3 pt-5 pb-4">
+                <div class="col-md-6 col-sm-6 text-center ">
+                    <h2 class="fs-4 pb-4 ">
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum perspiciatis esse incidunt
                         repellat voluptates.
                     </h2>
-                    <button type="button " class="btn btn-outline-success btn-lg p-2">Read more</button>
-                    <button type="button " class="btn btn-outline-warning btn-lg p-2">Play video</button>
+                    <button type="button " class="btn btn-outline-success">Read more</button>
+                    <button type="button " class="btn btn-outline-warning">Play video</button>
                 </div>
 
-                <div class="col-md-4">
+                <div class="col-md-3 col-sm-3">
                     <img class="img-fluid" src="./assets/images/Designer _Flatline.svg" alt="arch image">
                 </div>
             </div>
@@ -90,7 +93,7 @@
             </path>
         </svg>
     </header>
-
+    <!-- SOCIAL SECTION -->
     <section class="social">
         <div class="container">
             <div class="row w-50 mx-auto pt-3 justify-content-center">
@@ -102,6 +105,70 @@
                         alt=""></div>
                 <div class="col-lg-2 col-md-3 col-sm-3 col-3"><img class="img-fluid" src="./assets/images/Instagram.png"
                         alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- FEATURES SECTION -->
+    <section class="features gradient">
+        <!-- Top section waves -->
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+            <path fill="#fff" fill-opacity="1"
+                d="M0,320L48,293.3C96,267,192,213,288,176C384,139,480,117,576,144C672,171,768,245,864,245.3C960,245,1056,171,1152,149.3C1248,128,1344,160,1392,176L1440,192L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z">
+            </path>
+        </svg>
+
+        <!-- Section content -->
+        <div class="container">
+            <div class="row justify-content-center align-items-center">
+
+                <div class="col-md-4"> <img class="img-fluid" src="./assets/images/Designer _Two Color.svg" alt="">
+                </div>
+                <div class="col-md-4">
+                    <h1>This is a great tilte</h1>
+                    <p>Tato Lorem ipsum dolor sit amet.</p>
+                    <ul>
+                        <li>Item 1</li>
+                        <li>Item 2</li>
+                        <li>Item 3</li>
+                        <li>Item 4</li>
+                        <li>Item 5</li>
+                    </ul>
+                </div>
+
+            </div>
+        </div>
+
+        <!-- Bottom section waves -->
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+            <path fill="#fff" fill-opacity="1"
+                d="M0,192L48,176C96,160,192,128,288,128C384,128,480,160,576,149.3C672,139,768,85,864,90.7C960,96,1056,160,1152,208C1248,256,1344,288,1392,304L1440,320L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
+            </path>
+        </svg>
+    </section>
+    <!-- Option Section -->
+    <section class="options">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="icon gradient mb-4"></div>
+                    <h2>Built for developers</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque omnis similique perferendis
+                        praesentium qui suscipit numquam ut est velit aliquam.</p>
+                </div>
+                <div class="col-md-4">
+                    <div class="icon gradient mb-4"></div>
+                    <h2>Built for desingers</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque omnis similique perferendis
+                        praesentium qui suscipit
+                        numquam ut est velit aliquam.</p>
+                </div>
+                <div class="col-md-4">
+                    <div class="icon gradient mb-4"></div>
+                    <h2>Built for anyone</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque omnis similique perferendis
+                        praesentium qui suscipit
+                        numquam ut est velit aliquam.</p>
                 </div>
             </div>
         </div>
