--- a/index.html
+++ b/index.html
@@ -1,178 +1,29 @@
 <!DOCTYPE html>
-<HTML lang="pt-br">
+<html lang="pt-br" translate="no">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>David Chus's China Bistro</title>
-    <link rel="stylesheet" href="./assets/fontawesome/css/all.css">
-    <!-- boostrap -->
+    <title>Tato Levicz Dev Page</title>
+    <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
-    <link rel="stylesheet" href="./assets/css/main.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <!-- fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Oxygen:wght@300&display=swap"
-        rel="stylesheet">
-
 </head>
 
 <body>
-    <script src="https://unpkg.com/@popperjs/core@2.4.0/dist/umd/popper.min.js"></script>
-    <script src="./bootstrap-5.0.2/js/jquery-3.6.0.min.js"></script>
+
+    <h1 class="text">Testanto!</h1>
+
+    <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
-
-    <script src="./scripts/samples.js"></script>
-
-    <!-- NAVBAR -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-        <div class="container">
-            <a class="navbar-brand" href="#">
-                <div class="icon ">
-                    <img class="img-fluid" src="./assets/images/music_note.png" alt="brand icon">
-                </div>
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Features</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Pricing</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <!-- HEADER -->
-    <header class="page-header gradient">
-        <div class="container">
-            <div class="margin"></div>
-            <div class="row align-items-center justify-content-center">
-
-                <div class="col-md-3 col-sm-3">
-                    <img class="img-fluid" src="./assets/images/Architect_Flatline.svg" alt="arch image">
-                </div>
-
-                <div class="col-md-6 col-sm-6 text-center ">
-                    <h2 class="fs-4 pb-4 ">
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum perspiciatis esse incidunt
-                        repellat voluptates.
-                    </h2>
-                    <button type="button " class="btn btn-outline-success">Read more</button>
-                    <button type="button " class="btn btn-outline-warning">Play video</button>
-                </div>
-
-                <div class="col-md-3 col-sm-3">
-                    <img class="img-fluid" src="./assets/images/Designer _Flatline.svg" alt="arch image">
-                </div>
-            </div>
-        </div>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 200">
-            <path fill="#FFF" fill-opacity="1"
-                d="M0,64L40,69.3C80,75,160,85,240,112C320,139,400,181,480,170.7C560,160,640,96,720,101.3C800,107,880,181,960,197.3C1040,213,1120,171,1200,160C1280,149,1360,171,1400,181.3L1440,192L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z">
-            </path>
-        </svg>
-    </header>
-    <!-- SOCIAL SECTION -->
-    <section class="social">
-        <div class="container">
-            <div class="row w-50 mx-auto pt-3 justify-content-center">
-                <div class="col-lg-2 col-md-3 col-sm-3 col-3"><img class="img-fluid" src="./assets/images/Facebook.png"
-                        alt=""></div>
-                <div class="col-lg-2 col-md-3 col-sm-3 col-3"><img class="img-fluid" src="./assets/images/Twitter.png"
-                        alt=""></div>
-                <div class="col-lg-2 col-md-3 col-sm-3 col-3"><img class="img-fluid" src="./assets/images/Linkedin.png"
-                        alt=""></div>
-                <div class="col-lg-2 col-md-3 col-sm-3 col-3"><img class="img-fluid" src="./assets/images/Instagram.png"
-                        alt="">
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- FEATURES SECTION -->
-    <section class="features gradient">
-        <!-- Top section waves -->
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-            <path fill="#fff" fill-opacity="1"
-                d="M0,320L48,293.3C96,267,192,213,288,176C384,139,480,117,576,144C672,171,768,245,864,245.3C960,245,1056,171,1152,149.3C1248,128,1344,160,1392,176L1440,192L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z">
-            </path>
-        </svg>
-
-        <!-- Section content -->
-        <div class="container">
-            <div class="row justify-content-center align-items-center">
-
-                <div class="col-md-4"> <img class="img-fluid" src="./assets/images/Designer _Two Color.svg" alt="">
-                </div>
-                <div class="col-md-4">
-                    <h1>This is a great tilte</h1>
-                    <p>Tato Lorem ipsum dolor sit amet.</p>
-                    <ul>
-                        <li>Item 1</li>
-                        <li>Item 2</li>
-                        <li>Item 3</li>
-                        <li>Item 4</li>
-                        <li>Item 5</li>
-                    </ul>
-                </div>
-
-            </div>
-        </div>
-
-        <!-- Bottom section waves -->
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-            <path fill="#fff" fill-opacity="1"
-                d="M0,192L48,176C96,160,192,128,288,128C384,128,480,160,576,149.3C672,139,768,85,864,90.7C960,96,1056,160,1152,208C1248,256,1344,288,1392,304L1440,320L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
-            </path>
-        </svg>
-    </section>
-    <!-- Option Section -->
-    <section class="options">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="icon gradient mb-4"></div>
-                    <h2>Built for developers</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque omnis similique perferendis
-                        praesentium qui suscipit numquam ut est velit aliquam.</p>
-                </div>
-                <div class="col-md-4">
-                    <div class="icon gradient mb-4"></div>
-                    <h2>Built for desingers</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque omnis similique perferendis
-                        praesentium qui suscipit
-                        numquam ut est velit aliquam.</p>
-                </div>
-                <div class="col-md-4">
-                    <div class="icon gradient mb-4"></div>
-                    <h2>Built for anyone</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque omnis similique perferendis
-                        praesentium qui suscipit
-                        numquam ut est velit aliquam.</p>
-                </div>
-            </div>
-        </div>
-    </section>
+    <!-- GSAP -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/gsap.min.js"></script>
+    <!-- Main Script -->
+    ,
+    <script src="./scripts/main.js"></script>
 </body>
 
-</HTML>
+</html>
