--- a/index.html
+++ b/index.html
@@ -13,7 +13,15 @@
 
 <body>
 
-    <h1 class="text">Testanto!</h1>
+    <header class="header">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col">home</div>
+                <div class="col">projetos</div>
+                <div class="col">about</div>
+            </div>
+        </div>
+    </header>
 
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
