--- a/index.html
+++ b/index.html
@@ -9,28 +9,71 @@
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 
 <body>
 
-    <header class="header">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col">home</div>
-                <div class="col">projetos</div>
-                <div class="col">about</div>
+    <!-- Header - navigation -->
+    <header>
+        <div class="container-fluid">
+            <div class="row justify-content-center page-link">
+                <div class="col-md-2 col-sm-3 col">
+                    <a href="#">home</a>
+                </div>
+                <div class="col-md-2 col-sm-3 col">
+                    <a href="#">projetos</a>
+                </div>
+                <div class="col-md-2 col-sm-3 col">
+                    <a href="#">sobre</a>
+                </div>
             </div>
         </div>
     </header>
 
+    <!-- Projects -->
+    <section class="projects">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-5"></div>
+                <div class="col-md-5"></div>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- Projects -->
+    <section class="about">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-5"></div>
+                <div class="col-md-5"></div>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-5"></div>
+                <div class="col-md-5"></div>
+            </div>
+        </div>
+    </footer>
+
+
+
+
+    <!-- Scripts setups -->
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
     <!-- GSAP -->
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/gsap.min.js"></script>
+
     <!-- Main Script -->
-    ,
     <script src="./scripts/main.js"></script>
 </body>
 
