--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- FONTS-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;800&family=Oxygen&family=Roboto&display=swap"
+        rel="stylesheet">
+    <!-- Last import -->
     <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 
@@ -16,8 +23,9 @@
 
     <!-- Header - navigation -->
     <header>
-        <div class="container-fluid">
-            <div class="row justify-content-center page-link">
+        <div class="container">
+            <!-- Navigation links -->
+            <div class="row justify-content-center page-link text-uppercase">
                 <div class="col-md-2 col-sm-3 col">
                     <a href="#">home</a>
                 </div>
@@ -26,6 +34,59 @@
                 </div>
                 <div class="col-md-2 col-sm-3 col">
                     <a href="#">sobre</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="container-fluid">
+            <div class="row mt-5 justify-content-center">
+                <div class="col-md-5 header-content-left ">
+                    <p class="txtPresentation fs-6">
+                        Olá, eu sou Arthur Abel Motelevicz
+                    </p>
+                    <h1 class="txtPresentation mt-1">
+                        Um andarilho <br> digital do sul do <br> mundo.
+                    </h1>
+                    <p class="txtPresentation fs-6 mt-4 ">
+                        Trabalho criando novos aplicativos e jogos na Opala Studios, em Curitiba - PR sul do Brasil.
+                        Abaixo estão alguns projetos que fazem parte do meu processo de aprendizagem e também são coisas
+                        malucas que uso para me
+                        distrair nos fins de semana.
+                    </p>
+                    <a href="" class="sectionHeaderLink">ver projetos <span>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                class="bi bi-arrow-down" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd"
+                                    d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z" />
+                            </svg>
+                        </span></a>
+                </div>
+                <div class="col-md-5 header-content-right">
+                    <div class="row justify-content-center">
+                        <div class="col-auto">
+                            <canvas class="effect-canvas"></canvas>
+                        </div>
+
+                        <div class="col-auto">
+                            <img class="header-picture" src="./assets/images/tato-picture.jpg" alt="">
+                        </div>
+                    </div>
+
+
+                    <!-- <img class="img-fluid header-picture" src="./assets/images/tato-picture.jpg" alt="">
+ -->
+
+                    <p class="txtPresentation-picture mt-3">
+                        Música e programação são minha paixão. Saiba mais <a href="#"
+                            class="about-link"><span></span>sobre mim
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                class="bi bi-arrow-right" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd"
+                                    d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z" />
+                            </svg>
+                            </span></a>
+                    </p>
+
                 </div>
             </div>
         </div>
