--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 
         <div class="container-fluid">
             <div class="row mt-5 justify-content-center">
+                <!-- Left content header -->
                 <div class="col-md-5 header-content-left ">
                     <p class="txtPresentation fs-6">
                         Olá, eu sou Arthur Abel Motelevicz
@@ -61,21 +62,12 @@
                             </svg>
                         </span></a>
                 </div>
-                <div class="col-md-5 header-content-right">
-                    <div class="row justify-content-center">
-                        <div class="col-auto">
-                            <canvas class="effect-canvas"></canvas>
-                        </div>
+                <!-- Right content header -->
+                <div class="col-md-5 header-content-right text-center">
 
-                        <div class="col-auto">
-                            <img class="header-picture" src="./assets/images/tato-picture.jpg" alt="">
-                        </div>
-                    </div>
+                    <canvas class="effect-canvas"></canvas>
 
-
-                    <!-- <img class="img-fluid header-picture" src="./assets/images/tato-picture.jpg" alt="">
- -->
-
+                    <img class="header-picture" src="./assets/images/tato-picture.jpg" alt="">
                     <p class="txtPresentation-picture mt-3">
                         Música e programação são minha paixão. Saiba mais <a href="#"
                             class="about-link"><span></span>sobre mim
@@ -89,7 +81,15 @@
 
                 </div>
             </div>
+
         </div>
+
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 200">
+            <path class="waveBottomHeader" fill-opacity="1"
+                d="M0,160L48,165.3C96,171,192,181,288,170.7C384,160,480,128,576,112C672,96,768,96,864,117.3C960,139,1056,181,1152,186.7C1248,192,1344,160,1392,144L1440,128L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
+            </path>
+        </svg>
+
     </header>
 
     <!-- Projects -->
