Project card done

--- a/index.html
+++ b/index.html
@@ -94,9 +94,23 @@
 
     <!-- Projects -->
     <section class="projects">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-5"></div>
+        <div class="container-fluid">
+            <div class="row justify-content-center">
+                <div class="col-md-5">
+                    <h1 class="projects-title">Projetos</h1>
+                    <div class="project-card" style="width: 18rem;">
+                        <div class="project-card-title">
+                            <p class="card-title">Primeiro projeto em HTML5, canvas, JS e só!</p>
+                        </div>
+                        <div class="project-card-body text-center">
+                            <img class="img-fluid " src="./assets/images/project_1.png" alt="">
+                        </div>
+                        <div class="project-card-footer">
+                            <a href="#" class="btn text-uppercase ">jogar</a>
+                        </div>
+                    </div>
+                    
+                </div>
                 <div class="col-md-5"></div>
             </div>
         </div>
