--- a/index.html
+++ b/index.html
@@ -95,26 +95,77 @@
     <!-- Projects -->
     <section class="projects">
         <div class="container-fluid">
+            <!-- Projects Title  -->
             <div class="row justify-content-center">
                 <div class="col-md-5">
                     <h1 class="projects-title">Projetos</h1>
-                    <div class="project-card" style="width: 18rem;">
-                        <div class="project-card-title">
-                            <p class="card-title">Primeiro projeto em HTML5, canvas, JS e só!</p>
-                        </div>
-                        <div class="project-card-body text-center">
-                            <img class="img-fluid " src="./assets/images/project_1.png" alt="">
-                        </div>
-                        <div class="project-card-footer">
-                            <a href="#" class="btn text-uppercase ">jogar</a>
+                </div>
+                <div class="col-md-5">
+
+                </div>
+            </div>
+
+            <!-- Projects Title  -->
+            <div class="row justify-content-center">
+                <div class="col-md-10 slider">
+                    <div class="slider-container">
+                            <div class="item project-card" style="width: 18rem;">
+                                <div class="project-card-title">
+                                    <p class="card-title">Primeiro projeto em HTML5, canvas, JS e só!</p>
+                                </div>
+                                <div class="project-card-body text-center">
+                                    <img class="img-fluid " src="./assets/images/project_1.png" alt="">
+                                </div>
+                                <div class="project-card-footer">
+                                    <a href="#" class="btn text-uppercase ">jogar</a>
+                                </div>
+                            </div>
+                            <div class="item project-card" style="width: 18rem;">
+                                <div class="project-card-title">
+                                    <p class="card-title">Primeiro projeto em HTML5, canvas, JS e só!</p>
+                                </div>
+                                <div class="project-card-body text-center">
+                                    <img class="img-fluid " src="./assets/images/project_1.png" alt="">
+                                </div>
+                                <div class="project-card-footer">
+                                    <a href="#" class="btn text-uppercase ">jogar</a>
+                                </div>
+                            </div>
+                            <div class="item project-card" style="width: 18rem;">
+                                <div class="project-card-title">
+                                    <p class="card-title">Primeiro projeto em HTML5, canvas, JS e só!</p>
+                                </div>
+                                <div class="project-card-body text-center">
+                                    <img class="img-fluid " src="./assets/images/project_1.png" alt="">
+                                </div>
+                                <div class="project-card-footer">
+                                    <a href="#" class="btn text-uppercase ">jogar</a>
+                                </div>
+                            </div>
+                            <div class="item project-card" style="width: 18rem;">
+                                <div class="project-card-title">
+                                    <p class="card-title">Primeiro projeto em HTML5, canvas, JS e só!</p>
+                                </div>
+                                <div class="project-card-body text-center">
+                                    <img class="img-fluid " src="./assets/images/project_1.png" alt="">
+                                </div>
+                                <div class="project-card-footer">
+                                    <a href="#" class="btn text-uppercase ">jogar</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    
                 </div>
-                <div class="col-md-5"></div>
             </div>
+
         </div>
+       
     </section>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path class="waveBottomProjects"  fill-opacity="1"
+            d="M0,96L48,101.3C96,107,192,117,288,122.7C384,128,480,128,576,133.3C672,139,768,149,864,154.7C960,160,1056,160,1152,138.7C1248,117,1344,75,1392,53.3L1440,32L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z">
+        </path>
+    </svg>
 
 
     <!-- Projects -->
