--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
             <div class="row mt-5 justify-content-center">
                 <!-- Left content header -->
                 <div class="col-md-5 header-content-left ">
-                    <p class="txtPresentation fs-6">
+                    <p class="fs-6">
                         Olá, eu sou Arthur Abel Motelevicz
                     </p>
-                    <h1 class="txtPresentation mt-1">
+                    <h1 class="mt-1">
                         Um andarilho <br> digital do sul do <br> mundo.
                     </h1>
-                    <p class="txtPresentation fs-6 mt-4 ">
+                    <p class="fs-6 mt-4 ">
                         Trabalho criando novos aplicativos e jogos na Opala Studios, em Curitiba - PR sul do Brasil.
                         Abaixo estão alguns projetos que fazem parte do meu processo de aprendizagem e também são coisas
                         malucas que uso para me
@@ -69,14 +69,16 @@
 
                     <img class="header-picture" src="./assets/images/tato-picture.jpg" alt="">
                     <p class="txtPresentation-picture mt-5">
-                        Música e programação são minha paixão. Saiba mais <a href="#"
-                            class="about-link"><span></span>sobre mim
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                class="bi bi-arrow-right" viewBox="0 0 16 16">
-                                <path fill-rule="evenodd"
-                                    d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z" />
-                            </svg>
-                            </span></a>
+                        Música e programação são minha paixão. Saiba mais 
+                        <a href="#" class="about-link">
+                            <span>sobre mim
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                    class="bi bi-arrow-right" viewBox="0 0 16 16">
+                                    <path fill-rule="evenodd"
+                                        d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z" />
+                                </svg>
+                            </span>
+                        </a>
                     </p>
 
                 </div>
@@ -159,21 +161,57 @@
             </div>
 
         </div>
-       
     </section>
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path class="waveBottomProjects"  fill-opacity="1"
-            d="M0,96L48,101.3C96,107,192,117,288,122.7C384,128,480,128,576,133.3C672,139,768,149,864,154.7C960,160,1056,160,1152,138.7C1248,117,1344,75,1392,53.3L1440,32L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z">
-        </path>
-    </svg>
-
-
-    <!-- Projects -->
+     <!-- About -->
     <section class="about">
-        <div class="container">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+            <path class="waveBottomProjects" fill-opacity="1"
+                d="M0,96L48,101.3C96,107,192,117,288,122.7C384,128,480,128,576,133.3C672,139,768,149,864,154.7C960,160,1056,160,1152,138.7C1248,117,1344,75,1392,53.3L1440,32L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z">
+            </path>
+        </svg>
+        <div class="container-fluid">
             <div class="row justify-content-center">
-                <div class="col-md-5"></div>
-                <div class="col-md-5"></div>
+                <div class="col-md-10 about-content-left">
+                    <p class="fs-6">
+                        Um pouco mais
+                    </p>
+                    <h1 class="mt-1">
+                        Sobre Mim
+                    </h1>
+                </div>
+            </div>
+            <div class="row justify-content-center mt-4">
+                <div class="col-md-5 about-content-left ">
+                    <p class="fs-6 ">
+                        Embora meu nome seja Arthur, a maioria das pessoas me chama de Tato, na verdade até meu <span><a href="#">canal de música no YT</a> </span>  se chama Tato Levicz. Eu sou nascido e criado em Curitiba-PR sul do Brasil. Até meus 27 anos de idade eu fui músico e sobrevivia tocando e cantando nos bares da cidade e foi somente nessa idade que eu ingressei no curso de Engenharia de Controle e Automação na PUC-PR.
+                    </p>
+
+                    <p class="fs-6 mt-4 ">
+                        Dentro dos cinco anos do curso de engenharia em mergulhei no universo da programção participando da primeira turma da <span><a href="#">Apple Developer Academy</a></span> e mais tarde fundando o <span><a href="#">Opala Studios</a></span> com outros dois amigos. Depois disso eu fiz pós graduação em Inteligência Artificial.
+                    </p>
+
+                    <p class="fs-6 mt-4 ">
+                        Além das aventuras na programação eu também tenho uma banda chamada <span><a href="#">O Ar</a></span> na qual eu sou o vocalista e componho as
+                        músicas em sua maioria.
+                    </p>
+                </div>
+                <div class="col-md-5  about-content-right">                
+                    <img class="about-picture img-fluid" src="./assets/images/o-ar-tato.png" alt="">
+                    <p class="txtPresentation-picture mt-2">
+                        Imagem do clipe da música Eu E Você - O Ar. 
+                        <a href="#" class="about-link">
+                            <span>Confira no YT
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right"
+                                    viewBox="0 0 16 16">
+                                    <path fill-rule="evenodd"
+                                        d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z" />
+                                </svg>
+                            </span>
+                        </a>
+                    </p>
+                
+                </div>
+                </div>
             </div>
         </div>
     </section>
