--- a/index.html
+++ b/index.html
@@ -64,23 +64,26 @@
                 </div>
                 <!-- Right content header -->
                 <div class="col-md-5 header-content-right text-center">
-
-                    <canvas class="effect-canvas"></canvas>
-
-                    <img class="header-picture" src="./assets/images/tato-picture.jpg" alt="">
+                    <div class="row">
+                        <div class="col-md-2">
+                            <canvas class="effect-canvas"></canvas>
+                        </div>
+                        <div class="col-md-3">
+                            <img class="img-fluid header-picture" src="./assets/images/tato-picture.png" alt="">
+                        </div>
+                    </div>
                     <p class="txtPresentation-picture mt-5">
-                        Música e programação são minha paixão. Saiba mais 
+                        Música e programação são minha paixão. Saiba mais
                         <a href="#" class="about-link">
                             <span>sobre mim
-                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                    class="bi bi-arrow-right" viewBox="0 0 16 16">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right"
+                                    viewBox="0 0 16 16">
                                     <path fill-rule="evenodd"
                                         d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z" />
                                 </svg>
                             </span>
                         </a>
                     </p>
-
                 </div>
             </div>
 
