--- a/index.html
+++ b/index.html
@@ -64,15 +64,15 @@
                 </div>
                 <!-- Right content header -->
                 <div class="col-md-5 header-content-right text-center">
-                    <div class="row">
-                        <div class="col-md-2">
+                    <div class="row h-100">
+                        <div class="col-md-4 col-sm-4 col">
                             <canvas class="effect-canvas"></canvas>
                         </div>
-                        <div class="col-md-3">
-                            <img class="img-fluid header-picture" src="./assets/images/tato-picture.png" alt="">
+                        <div class="col-md-8 col-sm-8 col">
+                            <img class="w-100 header-picture" src="./assets/images/tato-picture.png" alt="">
                         </div>
                     </div>
-                    <p class="txtPresentation-picture mt-5">
+                    <p class="txtPresentation-picture">
                         Música e programação são minha paixão. Saiba mais
                         <a href="#" class="about-link">
                             <span>sobre mim
@@ -199,8 +199,8 @@
                     </p>
                 </div>
                 <div class="col-md-5  about-content-right">                
-                    <img class="about-picture img-fluid" src="./assets/images/o-ar-tato.png" alt="">
-                    <p class="txtPresentation-picture mt-2">
+                    <img class="about-picture w-100" src="./assets/images/o-ar-tato.png" alt="">
+                    <p class="txtPresentation-picture mt-3">
                         Imagem do clipe da música Eu E Você - O Ar. 
                         <a href="#" class="about-link">
                             <span>Confira no YT
